--- a/frontend/styles/components.css
+++ b/frontend/styles/components.css
@@ -13,9 +13,7 @@
     z-index: 999;
 }
 
-#hero {
-    margin-top: 77px;
-}
+
 
 html, body {
     overflow-x: hidden;
